2009-09-21  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-google-code-bts-url-compose): New.
	(tinydebian-bts-url-bug-compose): Add code.google.com
	(tinydebian-bug-ask-url-for-bts-and-number): Add parameter
	`project'.
	(tinydebian-bug-ask-bts-and-number): Ask project if needed.
	(tinydebian-bug-url-forward): Add code.google.com support.
	(tinydebian-bug-url-forward): Add forge.mysql.com support.
	(tinydebian-bug-ask-bts-and-number): Add MySQL support.
	(tinydebian-mysql-bug-type-p): New.
	(tinydebian-bug-bts-type-determine): Add MySQL support.
	(tinydebian-mysql-bts-url-compose): New.
	(tinydebian-bts-url-bug-compose): Move debian last.
	(tinydebian-kde-bug-type-p): New.
	(tinydebian-kde-bts-url-compose): New.
	(tinydebian-bts-url-bug-compose): Add KDE.
	(tinydebian-bug-ask-bts-and-number): Add KDE.

2009-09-20  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyeat.el
	(on-windowed and Windowed Emacs): update documentation.
	(tinyeat-install-default-bindings): Rethink
	key bindings from non-window perspective. MANY KEYS
	HAVE BEEN RELOCATED FOR BETTER NON-WINDOW ACCESS.

	* tiny/tinyperl.el (tinyperl-install-variables-lookup): Add
	word 'wait'.
	(tinyperl-pod2text): Work around bug in Perl library
	Pod::Text.
	(tinyperl-pod-by-module): Correct Modules find algorithm.

	* tiny/tinyprocmail.el: Modernize all macros.
	Adjust indentation in all defuns.

	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-usertag): Correct
	interactive spec.
	(tinydebian-bts-mail-compose-macro): Call
	`turn-on-tinydebian-mail-mode'
	(History): adjust wording.
	(tinydebian-bts-mode-maybe-turn-on): Improve regexp.

2009-09-19  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-bug-browse-url-main-interactive):
	Prefer `url-str' if found. This correctly finds launchpad URLs.

2009-09-13  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyadvice.el (shell): Correct doxstring.
	(vc-do-command): Remove (old RCS).
	(vc-register): Remove (old RCS).